# analytics-retrieval-template

./: .app.env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
db/: migrate.sql
fastanalytics/: app.py  depends.py
fastanalytics/config/: constants.py  environments.py
fastanalytics/db/: activator.py  engine.py
fastanalytics/db/timescale/: functions.py  hypertables.py  schemas.py  utils.py
fastanalytics/entrypoints/: __init__.py  db.py  logger.py
fastanalytics/middleware/: logger.py
fastanalytics/models/: events.py  utils.py
fastanalytics/routes/: events.py
fastanalytics/schemas/: responses.py
requirements/: requirements-dev.txt
scripts/: dumb_populate  entrypoint.sh  install.sh
src/: _logger.py  _types.py  app.py  depends.py  main.py  settings.py
src/config/: __init__.py
src/db/: __init__.py  activator.py  statements.py  statments.py
src/db/timescale/: functions.py  hypertables.py  schemas.py  utils.py
src/entrypoints/: __init__.py  db.py  logger.py
src/middleware/: __init__.py
src/models/: __init__.py  base.py  events.py
src/routes/: __init__.py  events.py
src/schemas/: __init__.py  _base.py  events.py  queries.py  responses.py
